--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,31 +1,91 @@
-<header>
+<section>
+  <div class="contact_container">
+    <div class="contactInfo">
+      <div>
+        <h2>Contact Info</h2>
+        <ul class="info">
+          <li>
+            <span><img src="./assets/icons/location.png" alt=""></span>
+            <span>
+              University of Eng & Tech <br>
+              Computer Science Depmartment <br>
+              Lahore
+            </span>
+          </li>
+          <li>
+            <span> <img src="./assets/icons/mail.png" alt=""> </span>
+            <span>ahsansaleem6389@gmail.com</span>
+          </li>
+          <li>
+            <span> <img src="./assets/icons/call.png" alt="call icon"> </span>
+            <span>(+92) 316 1461467</span>
+          </li>
+        </ul>
+      </div>
+
+      <ul class="sci">
+        <li><a href=""><img src="./assets/icons/1.png " alt=""></a></li>
+        <li><a href=""><img src="./assets/icons/2.png " alt=""></a></li>
+        <li><a href=""><img src="./assets/icons/3.png " alt=""></a></li>
+        <li><a href=""><img src="./assets/icons/4.png " alt=""></a></li>
+        <li><a href=""><img src="./assets/icons/5.png " alt=""></a></li>
+      </ul>
+
+    </div>
+    <div class="contactForm">
+
+      <h2>Sned a Messege</h2>
+      <div class="formBox">
+        <div class="inputBox w50">
+          <input type="text" required>
+          <span> First name </span>
+        </div>
+        <div class="inputBox w50">
+          <input type="text" required>
+          <span> Last name </span>
+        </div>
+        <div class="inputBox w50">
+          <input type="email" required>
+          <span> Email Address </span>
+        </div>
+        <div class="inputBox w50">
+          <input type="text" required>
+          <span> Email Address </span>
+        </div>
+        <div class="inputBox w100">
+          <textarea required></textarea>
+          <span> Write your massage here... </span>
+        </div>
+        <div class="inputBox w100">
+          <input type="submit" value="send">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <header>
   <h1>Contact Us Form Using Angular Material</h1>
 </header>
 <div class="content">
   <form>
     <mat-form-field>
       <input matInput placeholder="Name" required />
-      <!-- <mat-icon matSuffix>person</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Enter your email" required />
-      <!-- <mat-icon matSuffix>drafts</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input type="tel" matInput placeholder="Telephone" required />
-      <!-- <mat-icon matSuffix>call</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Subject" required />
-      <!-- <mat-icon matSuffix>create</mat-icon> -->
     </mat-form-field>
     <mat-form-field>
       <textarea matInput placeholder="Textarea" required></textarea>
-      <!-- <mat-icon matSuffix>save</mat-icon> -->
     </mat-form-field>
     <button mat-raised-button class="btn-custom">
       Send Now
-      <!-- <i class="material-icons"> send </i> -->
     </button>
   </form>
-</div>
+</div> -->
